# db/sqlc/models.go
@@ -1,0 +1,36 @@
+// Code generated by sqlc. DO NOT EDIT.
+
+package db
+
+import (
+	"database/sql"
+	"time"
+)
+
+type Anime struct {
+	ID            int64         `json:"id"`
+	Name          string        `json:"name"`
+	Description   string        `json:"description"`
+	Status        string        `json:"status"`
+	NumOfEpisodes sql.NullInt32 `json:"numOfEpisodes"`
+	Cast          []string      `json:"cast"`
+	Genre         []string      `json:"genre"`
+	CreatedAt     time.Time     `json:"createdAt"`
+}
+
+type Character struct {
+	ID              int64     `json:"id"`
+	Name            string    `json:"name"`
+	FromAnime       int64     `json:"fromAnime"`
+	Intro           string    `json:"intro"`
+	Characteristics []string  `json:"characteristics"`
+	CreatedAt       time.Time `json:"createdAt"`
+}
+
+type Episode struct {
+	ID          int64     `json:"id"`
+	Number      int32     `json:"number"`
+	Anime       int64     `json:"anime"`
+	Description string    `json:"description"`
+	CreatedAt   time.Time `json:"createdAt"`
+}
