# swagger/anime.swagger.json
@@ -18,7 +18,7 @@
   "paths": {
     "/v1/animes": {
       "get": {
-        "summary": "RPC for fetching the list of Animes",
+        "summary": "Lists Animes with desired Criteria",
         "operationId": "AnimeService_ListAnimes",
         "responses": {
           "200": {
@@ -30,10 +30,191 @@
           "default": {
             "description": "An unexpected error response.",
             "schema": {
-              "$ref": "#/definitions/googlerpcStatus"
+              "$ref": "#/definitions/rpcStatus"
             }
           }
         },
+        "parameters": [
+          {
+            "name": "page",
+            "description": "Page number requested.",
+            "in": "query",
+            "required": false,
+            "type": "integer",
+            "format": "int32"
+          },
+          {
+            "name": "sort",
+            "description": "The option to sort by -.\n\n - NAME: Option to Sort by Name\n - NUMOFEPISODES: Option to sort by number of Episodes\n - RATING: Option to Sort by Rating",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "enum": [
+              "NAME",
+              "NUMOFEPISODES",
+              "RATING"
+            ],
+            "default": "NAME"
+          },
+          {
+            "name": "order",
+            "description": "Order of Sorting - Ascending/Descending.\n\n - DESCENDING: Option for Ordering in Descending format\n - ASCENDING: Option for Ordering in Ascending format",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "enum": [
+              "DESCENDING",
+              "ASCENDING"
+            ],
+            "default": "DESCENDING"
+          },
+          {
+            "name": "filter",
+            "description": "Filters for search or display.",
+            "in": "query",
+            "required": false,
+            "type": "array",
+            "items": {
+              "type": "string"
+            },
+            "collectionFormat": "multi"
+          },
+          {
+            "name": "search",
+            "description": "The substring for search query.",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          }
+        ],
+        "tags": [
+          "AnimeService"
+        ]
+      },
+      "post": {
+        "summary": "Creates Anime with given data",
+        "operationId": "AnimeService_CreateAnime",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/animeCreateAnimeResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/animeAnime"
+            }
+          }
+        ],
+        "tags": [
+          "AnimeService"
+        ]
+      }
+    },
+    "/v1/animes/{id}": {
+      "get": {
+        "summary": "Get Anime with given ID",
+        "operationId": "AnimeService_GetAnime",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/animeGetAnimeResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "tags": [
+          "AnimeService"
+        ]
+      },
+      "delete": {
+        "summary": "Delete",
+        "operationId": "AnimeService_DeleteAnime",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "properties": {}
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "tags": [
+          "AnimeService"
+        ]
+      },
+      "patch": {
+        "summary": "Updates an existing Anime with given ID. Note that some properties such as ID are not modifiable.",
+        "operationId": "AnimeService_UpdateAnime",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/animeAnime"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/animeAnime"
+            }
+          }
+        ],
         "tags": [
           "AnimeService"
         ]
@@ -41,9 +222,33 @@
     }
   },
   "definitions": {
+    "ListAnimesRequestOrder": {
+      "type": "string",
+      "enum": [
+        "DESCENDING",
+        "ASCENDING"
+      ],
+      "default": "DESCENDING",
+      "description": "- DESCENDING: Option for Ordering in Descending format\n - ASCENDING: Option for Ordering in Ascending format",
+      "title": "Defining the Enum Order"
+    },
+    "ListAnimesRequestSort": {
+      "type": "string",
+      "enum": [
+        "NAME",
+        "NUMOFEPISODES",
+        "RATING"
+      ],
+      "default": "NAME",
+      "description": "- NAME: Option to Sort by Name\n - NUMOFEPISODES: Option to sort by number of Episodes\n - RATING: Option to Sort by Rating",
+      "title": "Defining the Enum Sort"
+    },
     "animeAnime": {
       "type": "object",
       "properties": {
+        "id": {
+          "type": "string"
+        },
         "name": {
           "type": "string",
           "title": "Name (Title) of the Anime"
@@ -65,20 +270,44 @@
           "title": "Cast of that Anime"
         },
         "status": {
-          "$ref": "#/definitions/animeAnimeStatus",
+          "type": "string",
           "title": "Status of the Anime"
+        },
+        "genre": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          },
+          "title": "Genre of the Anime"
+        },
+        "createdAt": {
+          "type": "string",
+          "title": "Time of Creating the Record for Anime"
+        }
+      },
+      "title": "Structure of Anime Object"
+    },
+    "animeCreateAnimeResponse": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "string",
+          "required": [
+            "id"
+          ]
+        }
+      },
+      "required": [
+        "id"
+      ]
+    },
+    "animeGetAnimeResponse": {
+      "type": "object",
+      "properties": {
+        "anime": {
+          "$ref": "#/definitions/animeAnime"
         }
       }
-    },
-    "animeAnimeStatus": {
-      "type": "string",
-      "enum": [
-        "UNKNOWN",
-        "ONGOING",
-        "COMPLETED",
-        "UPCOMING"
-      ],
-      "default": "UNKNOWN"
     },
     "animeListAnimesResponse": {
       "type": "object",
@@ -87,11 +316,25 @@
           "type": "array",
           "items": {
             "$ref": "#/definitions/animeAnime"
-          }
+          },
+          "title": "List of Animes to be returned"
+        }
+      },
+      "title": "Structure of ListAnimes Response"
+    },
+    "protobufAny": {
+      "type": "object",
+      "properties": {
+        "typeUrl": {
+          "type": "string"
+        },
+        "value": {
+          "type": "string",
+          "format": "byte"
         }
       }
     },
-    "googlerpcStatus": {
+    "rpcStatus": {
       "type": "object",
       "properties": {
         "code": {
@@ -106,18 +349,6 @@
           "items": {
             "$ref": "#/definitions/protobufAny"
           }
-        }
-      }
-    },
-    "protobufAny": {
-      "type": "object",
-      "properties": {
-        "typeUrl": {
-          "type": "string"
-        },
-        "value": {
-          "type": "string",
-          "format": "byte"
         }
       }
     }
